tests/baselines/reference/nodeModulesTripleSlashReferenceModeDeclarationEmit7(module=node16).errors.txt
/index.ts(2,1): error TS18055: Declaration file contains synthesized type reference directives: '"pkg", "pkg"'


==== /index.ts (1 errors) ====
    // only an esm file can `import` both kinds of files
    import obj1 from "./sub1/uses.js"
    ~~~~~~
!!! error TS18055: Declaration file contains synthesized type reference directives: '"pkg", "pkg"'
    import obj2 from "./sub2/uses.js"
    export default [obj1, obj2.default] as const;
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "exports": {
            "import": "./import.js",
            "require": "./require.js"
        }
    }
==== /node_modules/pkg/import.d.ts (0 errors) ====
    export {};
    declare global {
        interface ImportInterface { _i: any; }
        function getInterI(): ImportInterface;
    }
==== /node_modules/pkg/require.d.ts (0 errors) ====
    export {};
    declare global {
        interface RequireInterface { _r: any; }
        function getInterR(): RequireInterface;
    }
==== /sub1/uses.ts (0 errors) ====
    /// <reference types="pkg" />
    export default getInterI();
==== /sub1/package.json (0 errors) ====
    {
        "private": true,
        "type": "module"
    }
==== /sub2/uses.ts (0 errors) ====
    /// <reference types="pkg" />
    export default getInterR();
==== /sub2/package.json (0 errors) ====
    {
        "private": true,
        "type": "commonjs"
    }
==== /package.json (0 errors) ====
    {
        "private": true,
        "type": "module"
    }